--- a/app/web/templates/base.html
+++ b/app/web/templates/base.html
@@ -16,6 +16,7 @@
             <nav class="nav">
                 <a href="/" class="nav-link">Dashboard</a>
                 <a href="/auctions" class="nav-link">Auctions</a>
+                <a href="/review/hcpa-failures" class="nav-link">Review Queue</a>
             </nav>
             <div class="search-box">
                 <input type="text"
